<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_myPlaces">

    <fragment
            android:id="@+id/nav_myPlaces"
            android:name="android.com.diego.turistadroid.navigation_drawer.ui.myplaces.MyPlacesFragment"
            android:label="@string/my_places"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_myProfile"
            android:name="android.com.diego.turistadroid.navigation_drawer.ui.myprofile.MyProfileFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_nearMe"
            android:name="android.com.diego.turistadroid.navigation_drawer.ui.nearme.NearMeFragmentt"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>
</navigation>