<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".login.LogInActivity">

    <ImageView
            android:layout_width="229dp"
            android:layout_height="252dp" app:srcCompat="@drawable/logo" android:id="@+id/imgLogo_LogIn"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="30dp"/>
    <TextView
            android:text="@string/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textTitle_LogIn"
            android:textColor="@color/colorLetter" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo_LogIn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp" android:layout_marginEnd="297dp"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/roboto_bold"/>

    <EditText
            android:layout_width="316dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtUser_Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorLetter"
            android:textColorHint="@color/colorLetter"
            android:hint="@string/txtEmail"
            android:background="@drawable/box_inputs"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/textTitle_LogIn"/>

    <EditText
            android:layout_width="316dp"
            android:layout_height="44dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPwd_Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorLetter"
            android:textColorHint="@color/colorLetter"
            android:hint="@string/txtPass"
            android:background="@drawable/box_inputs"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtUser_Login"/>
    <Button
            android:text="@string/btnLogin"
            android:layout_width="135dp"
            android:layout_height="46dp"
            android:id="@+id/btnLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorLetter"
            android:background="@drawable/box_buttons"
            android:textSize="18sp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/txtPwd_Login"
            android:fontFamily="@font/roboto_bold"/>
    <TextView
            android:text="@string/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textNoAccount_LogIn"
            android:textColor="@color/colorLetter" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogIn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="88dp" android:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toStartOf="@+id/textRegister_LogIn"/>
    <TextView
            android:text="@string/registerLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textRegister_LogIn"
            android:textColor="@color/colorLetter2"
            android:fontFamily="@font/roboto_bold" android:layout_marginEnd="88dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="123dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPwd_Login"
            app:layout_constraintStart_toEndOf="@+id/textNoAccount_LogIn"/>

</androidx.constraintlayout.widget.ConstraintLayout>