<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signup.SignUp" android:background="@color/colorBackground">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">
            <ImageView
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:id="@+id/imaUser"
                    android:src="@drawable/ima_user"
                    app:layout_constraintVertical_bias="0.067"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="170dp">
            <TextView
                    android:text="@string/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitle"
                    android:textColor="@color/colorLetter"
                    android:layout_marginEnd="112dp"
                    app:layout_constraintHorizontal_bias="0.158"
                    app:layout_constraintVertical_bias="0.33"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_bold"/>
            <EditText
                    android:layout_width="316dp"
                    android:layout_height="44dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:paddingHorizontal="10dp"
                    android:id="@+id/txtName"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/colorLetterInput"
                    android:textColorHint="@color/colorLetterInput"
                    android:hint="@string/txtName"
                    android:background="@drawable/box_inputs"
                    android:layout_margin="5dp"/>
            <EditText
                    android:layout_width="316dp"
                    android:layout_height="44dp"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="10dp"
                    android:ems="10"
                    android:id="@+id/txtNameUser"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/colorLetterInput"
                    android:textColorHint="@color/colorLetterInput"
                    android:hint="@string/txtNameUser"
                    android:background="@drawable/box_inputs"
                    android:layout_margin="5dp"/>
            <EditText
                    android:layout_width="316dp"
                    android:layout_height="44dp"
                    android:paddingHorizontal="10dp"
                    android:inputType="textPersonName|textEmailSubject"
                    android:ems="10"
                    android:id="@+id/txtEmail"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/colorLetterInput"
                    android:textColorHint="@color/colorLetterInput"
                    android:hint="@string/txtEmail"
                    android:background="@drawable/box_inputs"
                    android:layout_margin="5dp"/>
            <EditText
                    android:layout_width="316dp"
                    android:layout_height="44dp"
                    android:inputType="textPassword"
                    android:paddingHorizontal="10dp"
                    android:ems="10"
                    android:id="@+id/txtPass"
                    android:hint="@string/txtPass"
                    android:textColor="@color/colorLetterInput"
                    android:textColorHint="@color/colorLetterInput"
                    android:fontFamily="@font/roboto_bold"
                    android:background="@drawable/box_inputs"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
            <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:maxHeight="20dip"
                    android:minHeight="20dip"
                    android:progress="0"/>

            <TextView
                    android:id="@+id/password_strength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_strength_weak"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                    app:layout_constraintEnd_toEndOf="@+id/txtPass"
                    app:layout_constraintTop_toBottomOf="@+id/txtPass"/>
        </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp">
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/imaTwitterSignUp"
                        android:layout_marginHorizontal="30dp"
                        android:src="@drawable/ic_twitter"/>
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/imaInstagramSignUp"
                        android:layout_marginHorizontal="30dp"
                        android:src="@drawable/ic_instagram"/>
            </LinearLayout>
            <Button
                    android:text="@string/btnRegister"
                    android:layout_width="135dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnRegister"
                    android:textColor="@color/colorLetter"
                    android:background="@drawable/box_buttons"
                    android:textSize="18sp"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>