<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="10dp"
        android:background="@drawable/image_selection_background">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:id="@+id/relative_Place">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

            <TextView
                    android:text="@string/inputSocialMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="24sp"
                    android:textColor="@color/colorBackground"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">
            <EditText
                    android:layout_width="316dp"
                    android:layout_height="42dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtUserNameInstagram"
                    android:drawableEnd="@drawable/ic_insta32"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/colorLetterInput"
                    android:textColorHint="@color/colorLetterInput"
                    android:hint="@string/txtNameUser"
                    android:background="@drawable/box_inputs"
                    android:paddingHorizontal="10dp"
                    android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="90dp"
                android:baselineAligned="false">
            <Button
                    android:text="@string/btnOk"
                    android:layout_width="135dp"
                    android:layout_height="46dp"
                    android:id="@+id/btnOkInsta"
                    android:textColor="@color/colorLetter"
                    android:background="@drawable/box_buttons"
                    android:textSize="18sp"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>